# advent-of-code

./: .gitignore  .pre-commit-config.yaml
2022/: Cargo.toml  README.md  TODO.md
2022/day1/: Cargo.toml
2022/day1/src/: main.rs
2022/day2/: Cargo.toml
2022/day2/src/: main.rs
2022/day3/: Cargo.toml
2022/day3/src/: main.rs
2022/input-extractor/: Cargo.toml  README.md
2022/input-extractor/src/: get.rs  lib.rs  main.rs
2022/src/lib/: lib.rs
2023/Go/: README.md
2023/Go/advent-of-go/: main.go
2023/Go/advent-of-go/days/: day1.go
2023/Go/advent-of-go/get_input/: get.go
2023/Rust/: Cargo.toml  README.md
