[package]
name = "AdventOfCodeRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
itertools = "0.11.0"
microbench = "0.5.0"
regex = "1.8.4"
num = "^0.4"

[lib]
name = "input_extractor"
path = "src/lib/lib.rs"
